--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,4 @@ out/
 
 **/.DS_Store
 **/application.yml
-**/studing-fcm-firebase-adminsdk-*.jsonsrc/main/resources/studing-fcm-firebase-adminsdk-*.json
+**/studing-fcm-firebase-adminsdk-*.json
