deply : json 생성 형식 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,8 @@ jobs:
         run: echo "${{ secrets.APPLICATION_PROPERTIES }}" > ./src/main/resources/application.yml
 
       - name: Create Firebase Admin SDK json file
-        run: echo "${{ secrets.FIREBASE_ADMIN_SDK }}" > ./src/main/resources/studing-fcm-firebase-adminsdk-ltwke-d4d183baf8.json
+        run: |
+          echo '${{ secrets.FIREBASE_ADMIN_SDK }}' > ./src/main/resources/studing-fcm-firebase-adminsdk-ltwke-d4d183baf8.json
 
 
       - name: 테스트 및 빌드하기
