--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 
+	implementation 'com.slack.api:slack-api-client:1.43.0'
+	implementation 'com.slack.api:slack-api-model:1.43.0'
+	implementation 'com.slack.api:slack-app-backend:1.43.0'
 }
 
 tasks.named('test') {
