fix : LAzy를 Eager로 변경 및 NO8,13 로직 통일화

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@ out/
 **/application.yml
 
 **studing-a8837-firebase-adminsdk-*.json
+src/main/resources/amplitude.properties
+src/test/resources/amplitude.properties
