--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 	implementation 'org.json:json:20201115'
 	implementation 'com.amplitude:java-sdk:1.+'
 
+	implementation 'net.bytebuddy:byte-buddy:1.14.12'  // 최신 버전 사용
 
 }
 
